--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -23,15 +23,15 @@
         <!-- Left -->
         <div class="w-12 h-11justify-center items-center inline-flex">
           <div class="w-[47.52px] h-[43.52px] relative">
-            <img src="./img/Logo.svg" alt="" />
+            <img src="./img/Vectors/Logo.svg" alt="" />
           </div>
         </div>
       </div>
       <div class="flex gap-5 flex-row items-center">
         <!-- Right -->
-        <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./aboutUs.html">About us</a></div>
+        <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./main.html">Home</a></div>
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./products.html">Products</a></div>
-        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart.svg" alt="" /></a>
+        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/Vectors/shopping-cart.svg" alt="" /></a>
         <div class="sm:cursor-pointer p-4 md:hidden">
           <div class="bar bg-black h-1 w-6 mb-1"></div>
           <div class="bar bg-black h-1 w-6 mb-1"></div>
@@ -43,7 +43,7 @@
     <main class="flex flex-col font-josefin">
       <article class="container mt-5 w-full mx-auto place-content-center">
         <h1 class="text-3xl font-bold mb-4">About us</h1>
-        <img class="w-full object-cover h-[8em] mb-4" src="./img/hero.jpg" alt="" />
+        <img class="w-full object-cover h-[8em] mb-4" src="./img/Original/hero.jpg" alt="" />
         <p class="font-josefin mb-4"
           >Welcome to Your Vinyl Haven, where the enchanting world of vinyl records comes to life. Our passion for music
           and commitment to preserving the timeless charm of vinyl records inspired us to create a haven for music
@@ -91,13 +91,13 @@
 
               <a href="#" class="w-fit bg-orange-600 text-white py-2 px-4 rounded hover:bg-gray-800">Learn More</a>
             </div>
-            <img class="max-w-md ml-4" src="./img/hero.jpg" alt="" />
+            <img class="max-w-md ml-4" src="./img/Original/hero2.webp" alt="" />
           </div>
         </section>
 
         <section class="container mb-6 p-4 bg-white rounded-lg flex-row flex-wrap w-full mx-auto gap-10">
           <div class="flex flex-row">
-            <img class="max-w-md mr-4" src="./img/hero.jpg" alt="" />
+            <img class="max-w-md mr-4" src="./img/Original/vynil10.webp" alt="" />
             <div class="flex flex-col justify-between gap-3">
               <h2 class="text-xl font-bold mb-2">Passion for Music:</h2>
               <p class="mb-4"
@@ -126,7 +126,7 @@
                 >Go Green with Vinyl</a
               >
             </div>
-            <img class="max-w-md ml-4" src="./img/hero.jpg" alt="" />
+            <img class="max-w-md ml-4" src="./img/Original/vynil5.webp" alt="" />
           </div>
         </section>
       </article>
@@ -138,10 +138,10 @@
       <div class="text-black text-lg font-bold">Home</div>
       <div class="text-black text-lg font-bold">Products</div>
       <div class="flex flex-row items-center gap-1">
-        <img src="./img/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
+        <img src="./img/Vectors/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
       </div>
       <div class="text-black text-lg font-bold flex flex-row items-center gap-1">
-        <img class="w-[2em] h-[2em] relative" src="./img/up-arrow.svg" alt="" />
+        <img class="w-[2em] h-[2em] relative" src="./img/Vectors/up-arrow.svg" alt="" />
         Go up
       </div>
     </footer>
