--- a/src/main.html
+++ b/src/main.html
@@ -23,7 +23,7 @@
         <!-- Left -->
         <div class="w-12 h-11justify-center items-center inline-flex">
           <div class="w-[47.52px] h-[43.52px] relative">
-            <img src="./img/Logo.svg" alt="" />
+            <img src="./img/Vectors/Logo.svg" alt="" />
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@
         <!-- Right -->
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./aboutUs.html">About us</a></div>
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./products.html">Products</a></div>
-        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart.svg" alt="" /></a>
+        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/Vectors/shopping-cart.svg" alt="" /></a>
         <div class="sm:cursor-pointer p-4 md:hidden">
           <div class="bar bg-black h-1 w-6 mb-1"></div>
           <div class="bar bg-black h-1 w-6 mb-1"></div>
@@ -43,7 +43,7 @@
     <main class="flex flex-col">
       <div
         id="hero"
-        style="background-image: url(./img/hero.jpg); background-repeat: no-repeat; background-size: cover"
+        style="background-image: url(./img/Original/hero.jpg); background-repeat: no-repeat; background-size: cover"
         class="flex flex-row flex-grow lg: clip-path-bot"
       >
         <div id="filler-left" class="flex flex-grow"> </div>
@@ -76,7 +76,7 @@
         </div>
         <article class="grid grid-cols-1 md:grid-cols-3 gap-10">
           <section class="flex flex-col bg-white rounded-lg items-center justify-center p-6">
-            <img class="w-1/4 md:w-full" src="./img/vinyl1.jpg" alt="Product 1" />
+            <img class="w-1/4 md:w-full" src="./img/Original/vinyl1.jpg" alt="Product 1" />
             <div class="grid grid-cols-1 w-1/2 md:w-full">
               <h2 class="text-2xl font-bold mb-2">Classic Vinyl Collection</h2>
               <p class="mb-4"
@@ -89,7 +89,7 @@
           </section>
 
           <section class="flex flex-col bg-white rounded-lg items-center justify-center p-6">
-            <img class="w-1/2 md:w-full" src="./img/vinyl1.jpg" alt="Product 2" />
+            <img class="w-1/2 md:w-full" src="./img/Optimized/vynil2.avif" alt="Product 2" />
             <div class="grid grid-cols-1 w-1/2 md:w-full">
               <h2 class="text-2xl font-bold mb-2">Limited Edition Vinyl Series</h2>
               <p class="mb-4"
@@ -103,7 +103,7 @@
           </section>
 
           <section class="flex flex-col bg-white rounded-lg items-center justify-center p-6">
-            <img class="w-1/2 md:w-full" src="./img/vinyl1.jpg" alt="Product 3" />
+            <img class="w-1/2 md:w-full" src="./img/Optimized/vynil3.avif" alt="Product 3" />
             <div class="grid grid-cols-1 w-1/2 md:w-full">
               <h2 class="text-2xl font-bold mb-2">Modern Vibes Vinyl Set</h2>
               <p class="mb-4"
@@ -121,13 +121,13 @@
     <footer
       class="sm:flex sm:flex-col sm:items-center sm:gap-5 w-[100%] p-5 bg-orange-600 border-t-2 border-black flex font-josefin justify-between flex-wrap md:flex-row relative"
     >
-      <div class="text-black text-sm font-bold">Home</div>
-      <div class="text-black text-sm font-bold">Products</div>
+      <div class="text-black text-sm font-bold"><a href="./main.html">Home</a></div>
+      <div class="text-black text-sm font-bold"><a href="./products.html">Products</a></div>
       <div class="flex flex-row items-center gap-1">
-        <img src="./img/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
+        <img src="./img/Vectors/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
       </div>
       <div class="text-black text-sm font-bold flex flex-row items-center gap-1">
-        <img class="w-[2em] h-[2em] relative" src="./img/up-arrow.svg" alt="" />
+        <img class="w-[2em] h-[2em] relative" src="./img/Vectors/up-arrow.svg" alt="" />
         Go up
       </div>
     </footer>
