--- a/src/vinyl1.html
+++ b/src/vinyl1.html
@@ -19,7 +19,7 @@
         <!-- Left -->
         <div class="w-12 h-11justify-center items-center inline-flex">
           <div class="w-[47.52px] h-[43.52px] relative">
-            <img src="./img/Logo.svg" alt="" />
+            <img src="./img/Vectors/Logo.svg" alt="" />
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
         <!-- Right -->
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./aboutUs.html">About us</a></div>
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./products.html">Products</a></div>
-        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart.svg" alt="" /></a>
+        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/Vectors/shopping-cart.svg" alt="" /></a>
         <div class="sm:cursor-pointer p-4 md:hidden">
           <div class="bar bg-black h-1 w-6 mb-1"></div>
           <div class="bar bg-black h-1 w-6 mb-1"></div>
@@ -38,15 +38,12 @@
     <main>
       <article class="flex flex-col md:flex-row md:items-center md:justify-between mb-5">
         <div class="w-full md:w-1/2 mb-4 md:mb-0">
-          <img src="./img/vinyl1.jpg" alt="" class="w-full h-auto object-cover" />
+          <img src="./img/Original/vinyl1.jpg" alt="" class="w-full h-auto object-cover" />
         </div>
         <div class="w-full md:w-1/2 md:pl-8">
-          <h1 class="text-2xl font-bold mb-4">Vinyl 1</h1>
+          <h1 class="text-2xl font-bold mb-4">Whimsical Wanderlust</h1>
           <p class="text-lg leading-relaxed">
-            Pink Floyd's "The Dark Side of the Moon" is a concept album that was originally released in 1973. Known for
-            its immersive soundscapes, thought-provoking lyrics, and innovative recording techniques, it has become a
-            cornerstone of progressive rock. The album explores themes of life, death, mental illness, and the human
-            experience, making it a profound and enduring work of art.
+            An eclectic mix of tunes from various artists and genres, offering a surprise for every listener. Dive into the unexpected and discover new sounds with this unique vinyl collection.
           </p>
           <p class="font-bold text-3xl m-3 w-full md:w-1/2 md:pl-8">
             Price: 10€
@@ -57,20 +54,20 @@
       </article>
       <hr />
     <div class="container mx-auto px-4 py-8 bg-slate-100 m-5">
-        <h1 class="text-3xl font-bold mb-4">Introducing the Vinyl Gem: Pink Floyd's "The Dark Side of the Moon"</h1>
+        <h1 class="text-3xl font-bold mb-4">Introducing the Vinyl Gem: Whimsical Wanderlust</h1>
         <p class="text-lg leading-relaxed mb-4">
-            At Vinyl Haven, we are proud to present one of the most iconic and influential albums in the history of music – Pink Floyd's "The Dark Side of the Moon." This vinyl record is a true masterpiece that has left an indelible mark on the world of rock music, and we are thrilled to offer it to you.
+            At Vinyl Haven, we are proud to present one of the most iconic and influential albums in the history of music – Whimsical Wanderlust. This vinyl record is a true masterpiece that has left an indelible mark on the world of rock music, and we are thrilled to offer it to you.
         </p>
-        <h2 class="text-2xl font-bold mb-4">About "The Dark Side of the Moon"</h2>
+        <h2 class="text-2xl font-bold mb-4">About Whimsical Wanderlust</h2>
         <p class="text-lg leading-relaxed mb-4">
-            Pink Floyd's "The Dark Side of the Moon" is a concept album that was originally released in 1973. Known for its immersive soundscapes, thought-provoking lyrics, and innovative recording techniques, it has become a cornerstone of progressive rock. The album explores themes of life, death, mental illness, and the human experience, making it a profound and enduring work of art.
+          Whimsical Wanderlust is a concept album that was originally released in 1973. Known for its immersive soundscapes, thought-provoking lyrics, and innovative recording techniques, it has become a cornerstone of progressive rock. The album explores themes of life, death, mental illness, and the human experience, making it a profound and enduring work of art.
         </p>
         <h2 class="text-2xl font-bold mb-4">Why Choose Vinyl?</h2>
         <p class="text-lg leading-relaxed mb-4">
-            Listening to "The Dark Side of the Moon" on vinyl is a transformative experience. The warmth and depth of analog sound breathe new life into the album, allowing you to hear every detail and nuance as the band intended. With vinyl, you can immerse yourself in the music and appreciate it in its purest form.
+            Listening to Whimsical Wanderlust on vinyl is a transformative experience. The warmth and depth of analog sound breathe new life into the album, allowing you to hear every detail and nuance as the band intended. With vinyl, you can immerse yourself in the music and appreciate it in its purest form.
         </p>
         <h2 class="text-2xl font-bold mb-4">The Vinyl Haven Difference</h2>
-        <p class="text-lg leading-relaxed mb-4">When you purchase Pink Floyd's "The Dark Side of the Moon" from Vinyl Haven, you can expect:</p>
+        <p class="text-lg leading-relaxed mb-4">When you purchase Whimsical Wanderlust from Vinyl Haven, you can expect:</p>
         <ul class="list-disc list-inside mb-4">
             <li class="text-lg leading-relaxed mb-2">Authenticity: Our vinyl records are meticulously inspected and guaranteed to be original pressings, ensuring an authentic listening experience.</li>
             <li class="text-lg leading-relaxed mb-2">Quality: We take pride in the quality of our records. This particular album is in excellent condition, preserving the brilliance of the music.</li>
@@ -79,7 +76,7 @@
         </ul>
         <h2 class="text-2xl font-bold mb-4">Own a Piece of Music History</h2>
         <p class="text-lg leading-relaxed mb-4">
-            "Pink Floyd's "The Dark Side of the Moon" is more than just an album; it's a cultural phenomenon. Owning this vinyl record is like possessing a piece of music history. Whether you're a devoted Pink Floyd fan or a collector of iconic albums, this is an opportunity you won't want to miss. Don't miss your chance to own a vinyl copy of Pink Floyd's "The Dark Side of the Moon." Visit Vinyl Haven now and add this extraordinary record to your collection. Immerse yourself in the music, and let the journey through "The Dark Side of the Moon" begin.
+          Whimsical Wanderlust is more than just an album; it's a cultural phenomenon. Owning this vinyl record is like possessing a piece of music history. Whether you're a devoted Pink Floyd fan or a collector of iconic albums, this is an opportunity you won't want to miss. Don't miss your chance to own a vinyl copy of Whimsical Wanderlust. Visit Vinyl Haven now and add this extraordinary record to your collection. Immerse yourself in the music, and let the journey through Whimsical Wanderlust begin.
         </p>
     </div>
     </main>
@@ -87,10 +84,10 @@
       <div class="text-black text-sm font-bold ">Home</div>
       <div class="text-black text-sm font-bold ">Products</div>
       <div class="flex flex-row items-center gap-1">
-        <img src="./img/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
+        <img src="./img/Vectors/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
       </div>
       <div class="text-black text-sm font-bold  flex flex-row items-center gap-1">
-        <img class="w-[2em] h-[2em] relative" src="./img/up-arrow.svg" alt="" />
+        <img class="w-[2em] h-[2em] relative" src="./img/Vectors/up-arrow.svg" alt="" />
         Go up
       </div>
     </footer>
